Update page about 2

--- a/product_list.html
+++ b/product_list.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Day la danh sach san pham</h1>
+    <h1>Day la danh sach san pham </h1>
+    <p>
+        Danh sach san pham 
+    </p>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
