update page home

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     END GIT/GITHUB-->
 
     <h1>Forum 1</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatibus dolores nemo. Nostrum error omnis corporis vitae obcaecati perspiciatis maiores, eum porro et aperiam, itaque temporibus illo, sed vero commodi.</p>
 </body>
 </html>
